[package]
name = "swarm"
version = "0.1.0"
authors = ["Jeremy Brixhe <jeremy@brixhe.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.0"
itertools = "0.8"
derivative = "2.1.1"
smallvec = "1.2"
tracing = "0.1"
metrics = { version = "0.12", optional = true }
fxhash = "0.2"
thiserror = "1.0"
bit-set = "0.5"

[dev-dependencies]
serde_json = "1.0"
type-uuid = "0.1"
erased-serde = "0.3"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8", features = ["v4"] }
tracing = "0.1"
itertools = "0.8"
rayon = "1.2"
